--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,10 +80,12 @@ main {
     max-width: 1140px;
     margin: 0px auto;
 }
+section {
+    margin-top: 130px;
+}
 
 /* about section styles */
 .about {
-    margin-top: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     padding: 130px 150px;
@@ -122,4 +124,34 @@ main {
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
+}
+
+/* what i do styles */
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    width: 267px;
+    height: 377px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+}
+
+.skill-title {
+    color: var(--Dark-01, #181818);
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description {
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
 }
