--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,6 +80,7 @@ main {
     max-width: 1140px;
     margin: 0px auto;
 }
+
 section {
     margin-top: 130px;
 }
@@ -95,7 +96,7 @@ section {
     text-align: center;
     font-size: 35px;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .section-description {
@@ -150,8 +151,46 @@ section {
     margin-top: 30px;
     margin-bottom: 20px;
 }
+
 .skill-description {
     color: var(--Dark-03, #757575);
     font-size: 16px;
     font-weight: 400;
+}
+
+.resume-contain {
+    display: flex;
+    gap: 70px;
+}
+
+.resume-title {
+    color: var(--Dark-02, #474747);
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.title {
+    color: var(--Dark-02, #474747);
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.subtitle {
+    color: var(--Dark-03, #757575);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.description {
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
 }
