--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -55,6 +55,21 @@ nav li {
     align-items: center;
 }
 
+.contact-number {
+    color: #FD6E0A;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    padding-top: 20px 20px;
+    width: 160px;
+    height: 64px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    border: 1px solid #FD6E0A;
+
+}
+
 .banner-title {
     font-size: 85px;
     font-weight: 700;
@@ -225,6 +240,6 @@ textarea {
     padding: 18px 30px;
 }
 
-.contact a{
+.contact a {
     text-decoration: none;
 }
